[package]
name = "hm-remote"
description = "Remote AT command console for HM series BLE device"
readme = "README.md"
repository = "https://github.com/johnmave126/hm-remote"
version = "0.1.4"
authors = ["Youmu <johnmave126@gmail.com.>"]
edition = "2018"
exclude = [
    ".github/**",
    ".gitignore",
]
license = "MIT OR Apache-2.0"
keywords  = ["bluetooth", "ble"]
categories = ["command-line-utilities"]

[dependencies]
btleplug = "0.7.1"
dialoguer = "0.7.1"
thiserror = "1.0.24"
clap = "2.33.3"
crossterm = "0.19.0"
ctrlc = "3.1.8"
crossbeam-channel = "0.5.0"
uuid = "0.8.2"
